Fix overlay video issues with overflow and zIndex being above toolbar

--- a/frontend/src/components/carousel2/css/style.css
+++ b/frontend/src/components/carousel2/css/style.css
@@ -970,7 +970,7 @@
   box-shadow: 0 0 0 50vmax rgba(0, 0, 0, 0.15);
   transition: opacity 0.5s ease;
   font-size: 14px;
-  z-index: 100000000;
+  z-index: 100000;
 }
 .thumbnail-carousel__video-modal-header {
   display: flex;
